SET(PROJECTNAME SOIL)
PROJECT(${PROJECTNAME})

MESSAGE(STATUS "Processing ${PROJECTNAME}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

FILE(GLOB SOIL_SRCS "*.c")
FILE(GLOB SOIL_HDRS "*.h")

#OpenGL
INCLUDE(FindOpenGL)
IF(OPENGL_FOUND)
  MESSAGE(STATUS "- Looking for OpenGL - found")
  SET(LIBRARIES ${LIBRARIES} ${OPENGL_LIBRARIES} ${OPENGL_GLU_LIBRARY})
  INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} )
ELSE(OPENGL_FOUND)
  MESSAGE(WARNING "! Looking for OpenGL - not found")
ENDIF(OPENGL_FOUND)

IF(APPLE)
  SET(LIBRARIES ${LIBRARIES} "-framework Foundation"  "-framework Cocoa")
ENDIF(APPLE)

#${Project}
ADD_LIBRARY(
    ${PROJECTNAME} 
    ${SOIL_SRCS} ${SOIL_HDRS} 
  )

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
